<?xml version="1.0"?>
<package format="2">
  <name>grasp</name>
  <version>0.0.0</version>
  <description>The grasp package</description>

  <maintainer email="jan.rosell@upc.edu">linux</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>


  <!--depend>kautham</depend-->

</package>
